--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -12,6 +12,7 @@
     width: 100%;
     border-bottom: 1px solid #ccc;
     padding-bottom: 5px;
+    padding-left: 20%;
   }
   
   label.logo {
@@ -23,6 +24,7 @@
   
   nav ul {
     float: right;
+    padding-right: 20%;
     margin-right: 20px;
   }
   
