--- a/src/components/Skill.css
+++ b/src/components/Skill.css
@@ -1,27 +1,35 @@
-/* Skill.css */
-
-.slideshow {
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-    height: 400px; /* Adjust height as needed */
-}
-
-.slides {
+  .Skills{
     display: flex;
-    animation: slideAnimation 20s linear infinite; /* Adjust duration as needed */
-}
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .grid{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
-.slides img {
-    width: 100%;
-    height: auto;
-}
+  .grid h1{
+    margin-top: 20px;
+    padding: 0 20px;
+    
+  }
 
-@keyframes slideAnimation {
-    0% {
-        transform: translateX(0%);
-    }
-    100% {
-        transform: translateX(-100%); /* Adjust to accommodate all images */
-    }
-}
+  .icons-container {
+    display: flex;
+    overflow: hidden; /* Hide icons that overflow */
+  }
+  
+  .icons {
+    /*border: 1px solid grey;*/
+    padding: 20px;
+  }
+  .icons img {
+    width: 100px;
+    height: 100px;
+    margin: 20px;
+  }
+  
