--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -11,13 +11,14 @@
     height: auto;
     width: 100%;
     border-bottom: 1px solid #ccc;
-    padding-bottom: 5px;
+    padding-bottom: 15px;
     padding-left: 20%;
+    overflow: auto;
   }
   
   label.logo {
     font-size: 35px;
-    line-height: 80px;
+    line-height: 100px;
     padding: 0 20px;
     font-weight: bold;
   }
@@ -30,7 +31,7 @@
   
   nav ul li {
     display: inline-block;
-    line-height: 80px;
+    line-height: 100px;
     margin: 0 15px;
   }
   
@@ -48,7 +49,7 @@
   }
   
   /* Media query for responsiveness */
-  @media (max-width: 768px) {
+  @media (max-width: 1162px) {
     nav {
       display: none; /* Hide the navigation when the screen size is 768px or smaller */
     }
@@ -68,4 +69,4 @@
       margin: 10px 0;
     }
   }
-  
+    
