--- a/src/components/Edu.css
+++ b/src/components/Edu.css
@@ -1,75 +1,75 @@
-.Timeline{
+.Timeline {
   padding: 5% 10%;
 }
 
-.container{
-  width:50%;
+.container {
+  width: 50%;
   height: 200px;
   position: relative;
   padding: 10px 5%;
 }
 
 .left-container {
-left: 0;
+  left: 0;
 }
 
-.right-container{
+.right-container {
   left: 50%;
 }
 
 .left-container .ball {
   width: 13px;
   height: 13px;
-  background-color: black;
+  background-color: rgb(65, 65, 65);
   position: absolute;
   right: -8px;
   top: -5px;
   border-radius: 50%;
- /* Added transition for transform property */
+  /* Added transition for transform property */
 }
 
 
-.right-container .ball{
+.right-container .ball {
   width: 13px;
   height: 13px;
-  background-color: black;
-  position:absolute;
-  left : -4px;
-  top : -5px;
+  background-color: rgb(65, 65, 65);
+  position: absolute;
+  left: -4px;
+  top: -5px;
   border-radius: 50%;
 }
 
 .left-container::after {
   content: "";
-  position:absolute;
+  position: absolute;
   z-index: 1;
-  width :3px;
-  right :-3px;
+  width: 3px;
+  right: -3px;
   height: 110%;
   top: -5px;
-  background-color: black;
+  background-color: rgb(65, 65, 65);
 }
 
 .right-container::after {
   content: "";
-  position:absolute;
+  position: absolute;
   z-index: 1;
-  width :3px;
-  left :0px;
+  width: 3px;
+  left: 0px;
   height: 110%;
   top: -5px;
-  background-color: black;
+  background-color: rgb(65, 65, 65);
 }
 
 .box {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
+  height: 135%;
   background-color: whitesmoke;
   border-radius: 3%;
   transition: transform 0.3s;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   padding: 10px 10px;
   justify-content: center;
 }
@@ -86,12 +86,14 @@ left: 0;
   margin-bottom: 15px;
   font-weight: 600;
 }
+
 .box h2 {
   color: #383838;
-  font-size: 1.0rem;
+  font-size: 1.1rem;
   margin-bottom: 15px;
-  font-weight: 500;
+  font-weight: 300;
 }
+
 .box h3 {
   color: #383838;
   font-size: 1rem;
@@ -99,7 +101,47 @@ left: 0;
   font-weight: 500;
 }
 
-.box h4{
-  font-weight: 700;
+.box h4 {
+  font-weight: 600;
   margin-bottom: 15px;
+  color: rgb(43, 41, 41);
+}
+
+.box h5 {
+  color: rgb(38, 38, 38);
+  font-weight: 400;
+  font-size: 1.2em;
+  margin-bottom: 10px
+}
+
+#Education,
+#Experience {
+  width: auto;
+  height: 50px;
+  background-color: transparent;
+  border-style: none;
+  color: rgb(43, 42, 42);
+  font-weight: 100;
+  font-size: 2.0em;
+  padding: 20px;
+}
+
+
+#Education.active,
+#Experience.active {
+  color: rgb(123, 119, 119);
+  margin-bottom: 15px;
+  font-size: 2.0rem;
+  font-weight: 100;
+}
+
+.select {
+  padding: 40px 0;
+  justify-content: center;
+  display: flex;
+  margin-bottom: 30px;
+}
+
+#heading {
+  padding-left: 7%;
 }
