--- a/src/components/Edu.css
+++ b/src/components/Edu.css
@@ -132,7 +132,7 @@
   color: rgb(123, 119, 119);
   margin-bottom: 15px;
   font-size: 2.0rem;
-  font-weight: 100;
+  font-weight: 100 !important;
 }
 
 .select {
