--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -1,9 +1,16 @@
 .Projects{
-display: flex;
 justify-content: center;
+display: flex;
+flex-direction: row;
+justify-content: center;
+width: 100%;
+height: 50%;
 }
 .ContentBox {
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .prevButton,
