--- a/src/components/Edu.css
+++ b/src/components/Edu.css
@@ -1,3 +1,13 @@
+@keyframes slideIn {
+  0% {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 .Timeline {
   padding: 5% 10%;
 }
@@ -7,6 +17,7 @@
   height: 200px;
   position: relative;
   padding: 10px 5%;
+  animation: slideIn 1s ease forwards;
 }
 
 .left-container {
