--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -1,38 +1,56 @@
-.Projects{
-justify-content: center;
-display: flex;
-flex-direction: row;
-justify-content: center;
-width: 100%;
-height: 50%;
-}
-.ContentBox {
+.projects {
+    padding: 0 30%;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.slidebox img {
+    width: 300px;
+    height: 300px;
+}
+
+.slidebox {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.prevButton,
-.nextButton {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgba(255, 255, 255, 0.5); /* Adjust as needed */
-    border: none;
-    padding: 10px;
-    cursor: pointer;
+.slidebox button {
+    color: #1f1f1f;
+    height: 80px;
+    width: 80px;
+    background-color: white;
+    border-style: none;
+    font-size: 3em;
+    font-weight: 900;
+    transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
-.prevButton {
-    left: 10px; /* Adjust left margin */
+.slidebox button:hover {
+    transform: scale(1.2);
+    /* Scale up on hover */
 }
 
-.nextButton {
-    left: 220px; /* Adjust right margin */
+.slidebox button:active {
+    transform: scale(0.7);
+    /* Scale down when clicked */
+    transition-duration: 0s;
+    /* Remove transition duration for immediate effect */
 }
 
-.ContentBox img{
-    width: 200px;
-    height: 200px;
+.projects h1 {
+    color: #404040;
+    font-size: 1.5rem;
+    line-height: 1.6;
+    font-weight: 300;
+}
+
+#projects {
+    margin-top: 80px;
+    margin-left: 15%;
 }
