--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -1,7 +1,7 @@
 .about {
     display: flex;
     flex-direction: row;
-    padding: 5% 10%;
+    padding: 5% 10% 0 10%;
 }
 
 .links {
@@ -25,9 +25,12 @@
     border-radius: 100%;
     transition: transform 0.3s ease-in-out;
 }
+
 .profile img:hover {
-    transform: scale(1.1); /* Increase size on hover */
+    transform: scale(1.1);
+    /* Increase size on hover */
 }
+
 .about .intro h1 {
     color: black;
     font-size: 2.5rem;
@@ -74,7 +77,7 @@
         order: 2;
     }
 
-    .intro h3{
+    .intro h3 {
         text-align: justify;
     }
 
