--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -26,7 +26,7 @@
 
 .slidebox button {
     color: #515151;
-    height: 300px;
+    height: 100px;
     width: 80px;
     background-color: rgb(255, 255, 255);
     border-style: none;
@@ -81,4 +81,30 @@
     height: 150px;
     animation: slideIn;
     animation-duration: 2s;
+}
+
+
+@media (max-width :  768px) {
+
+
+    .slidebox img{
+        max-width: 100%;
+        width: auto;
+        height: auto;
+    }
+
+    .description {
+        justify-content: left;
+        text-align: justify;
+    }
+
+    .projects{
+        padding:  0 10%;
+    }
+
+    .slidebox {
+        padding: 0 80px;
+    }
+
+    
 }
