--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#subheadings{
+  margin: 50px 0;
+  margin-left: 12%;
+}
+
+#subheadings-projects{
+  margin-top: 12% ;
+  margin-bottom: 50px;
+  margin-left: 12%;
+}
