--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,13 @@ code {
 }
 
 #subheadings{
+  font-weight: 600;
   margin: 50px 0;
   margin-left: 12%;
 }
 
 #subheadings-projects{
+  font-weight: 600;
   margin-top: 12% ;
   margin-bottom: 50px;
   margin-left: 12%;
