--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -91,33 +91,34 @@
 
 .description {
     width: auto;
-    height: 150px;
+    height: 100%;
     animation: slideIn;
     animation-duration: 2s;
 }
 
 
-@media (max-width :  768px) {
 
-
-    .slidebox img{
-        max-width: 100%;
-        width: auto;
-        height: auto;
+@media (max-width:750px) {
+    .slidebox{
+        padding: 0;
+        margin: 0 ;
+    
     }
 
-    .description {
-        justify-content: left;
-        text-align: justify;
+    .slidebox img{
+        width: 300px;
+        height: 300px;
+    }
+
+    .slidebox button{
+        width: 10%;
     }
 
     .projects{
-        padding:  0 10%;
+        padding: 0%;
     }
 
-    .slidebox {
-        padding: 0 80px;
+    .description{
+        padding: 0 20px;
     }
-
-    
 }
