--- a/src/index.css
+++ b/src/index.css
@@ -11,12 +11,14 @@ code {
 }
 
 #subheadings{
+  font-size: 1.7em;
   font-weight: 600;
   margin: 50px 0;
   margin-left: 12%;
 }
 
 #subheadings-projects{
+  font-size: 1.7em;
   font-weight: 600;
   margin-top: 12% ;
   margin-bottom: 50px;
