--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,43 +1,73 @@
 .form{
-    padding: 0 ;
-    background-color: aqua;
+    padding: 0 20%;
     display: flex;
     flex-wrap: wrap;
-    text-align: center;
     justify-content: center;
+    text-align: center;
 }
 
 .form-name{
-    font-size: 2em;
+    font-size: 1.5em;
     width: 50%;
-    height: auto;
+    height: 100px;
     order: 1;
-    background-color: oldlace;
+    display: flex;
+    justify-content: right;
+    text-align: center;
+    align-items: center;
+    padding: 20px;
+    
 }
 .form-email{
-    font-size: 2em;
+    font-size: 1.5em;
     width: 50%;
+    height: 100px;
     order: 2;
-    background-color: greenyellow;
+    display: flex;
+    justify-content: left;
+    text-align:left;
+    align-items: center;
+    padding: 20px;
 }
 .form-message{
-    font-size: 2em;
+    margin-top: 20px;
+    font-size: 1.5em;
     width: 100%;
+    height: 100px;
     order: 3;
-    background-color: gray;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
 }
 
 #form-summit{
     order: 4;
-    background-color: blue;
+    font-size: 1.0em;
+    width: 90px;
+    height : 40px;
+    margin-bottom: 50px;
+    margin-left: 60px;
+    margin-top: 40px;
+
+
 }
 
-.form input{
+.form-name input{
     width: 200px;
-    height : 100px;
+    height : 30px;
+    margin: 25px;
 }
+
+.form-email input{
+    width: 250px;
+    height : 30px;
+    margin: 25px;
+}
+
 
 .form textarea{
     width: 400px;
-    height : 200px
+    height : 100px;
+    margin : 15px;
 }
