--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,73 +1,87 @@
 .form{
-    padding: 0 20%;
+    padding: 0 25%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    text-align: center;
 }
 
-.form-name{
-    font-size: 1.5em;
-    width: 50%;
-    height: 100px;
-    order: 1;
+.firstname {
+    margin-right : 10%;
     display: flex;
-    justify-content: right;
-    text-align: center;
-    align-items: center;
-    padding: 20px;
-    
-}
-.form-email{
-    font-size: 1.5em;
-    width: 50%;
+    flex-direction: column;
+    width: 45%;
     height: 100px;
-    order: 2;
-    display: flex;
-    justify-content: left;
-    text-align:left;
-    align-items: center;
-    padding: 20px;
+    left: 0;
 }
-.form-message{
-    margin-top: 20px;
+
+.lastname{
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+    right: 0;
+}
+
+.form label {
     font-size: 1.5em;
+    font-weight: 200;
+}
+
+.form input{
+    margin-top: 10px;
+    width: auto;
+    height : 30px;
+}
+.email {
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    height: 100px;
-    order: 3;
+}
+
+.message{
+    margin-top: 25px;
     display: flex;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
+    flex-direction: column;
+    width: 100%;
 }
-
-#form-summit{
-    order: 4;
-    font-size: 1.0em;
-    width: 90px;
-    height : 40px;
-    margin-bottom: 50px;
-    margin-left: 60px;
-    margin-top: 40px;
-
-
-}
-
-.form-name input{
-    width: 200px;
-    height : 30px;
-    margin: 25px;
-}
-
-.form-email input{
-    width: 250px;
-    height : 30px;
-    margin: 25px;
-}
-
 
 .form textarea{
-    width: 400px;
+    margin-top: 10px;
+    width: auto;
     height : 100px;
-    margin : 15px;
+}
+
+.formsummit {
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: auto;
+    margin-bottom: 40px;
+}
+
+.formsummit button {
+    width: 80px;
+    height: 40px;
+    background-color: #ffffff;
+    color: #333333; 
+    border: 1px solid #898989; 
+    border-radius: 5px;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1); 
+    cursor: pointer;
+    transition: all 0.3s ease; 
+}
+
+/* Hover effect */
+.formsummit button:hover {
+    background-color: #9d9d9d; 
+    color: #1c1c1c; 
+    border: 1px solid #9b9b9b;
+}
+
+.formsummit button:active {
+    background-color: #c0c0c0; 
+    color: #303030; 
+
 }
