--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -15,13 +15,13 @@
 }
 
 .intro {
-    padding: 0 10%;
+    padding-left: 10%;
 }
 
 .profile img {
     margin-top: 0%;
-    width: 250px;
-    height: 250px;
+    width: 270px;
+    height: 270px;
     border-radius: 100%;
     transition: transform 0.3s ease-in-out;
 }
