--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -96,7 +96,31 @@
     animation-duration: 2s;
 }
 
+.tools{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 5px;
+    margin-top: 15px;
+}
 
+.tools h2{
+    color: #404040;
+    /* color: #404040; */
+    font-size: 1.5rem;
+    line-height: 1.6;
+    font-weight: 500;
+    
+
+}
+.tools h3{
+    color: #404040;
+    font-size: 1.5rem;
+    line-height: 1.6;
+    font-weight: 500;
+}
 
 @media (max-width:750px) {
     .slidebox{
