--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -3,6 +3,8 @@
     padding: 0 20%;
     display: flex;
     flex-wrap: wrap;
+    font-family :system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+
 }
 
 .firstname {
@@ -27,9 +29,12 @@
 }
 
 .form input{
+    font: 500;
     margin-top: 10px;
     width: auto;
     height : 30px;
+    font-family :system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+
 }
 .email {
     margin-top: 15px;
@@ -49,6 +54,7 @@
     margin-top: 10px;
     width: auto;
     height : 100px;
+    font-family :system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 .formsummit {
